force-app/main/default/objects/Job__c/fields/Approx_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Approx_Finish_Date__c</fullName>
    <label>Approx Finish Date</label>
    <type>Date</type>
</CustomField>