force-app/main/default/objects/Job__c/fields/Approx_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approx_Start_Date__c</fullName>
    <label>Approx Start Date</label>
    <type>Date</type>
</CustomField>