force-app/main/default/objects/Job__c/fields/Date_Converted_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Date_Converted_to_Job__c</fullName>
    <label>Date Converted to Job</label>
    <type>Date</type>
</CustomField>