force-app/main/default/objects/Job__c/fields/Has_Plans__c.field-meta.xml
<CustomField>
    <fullName>Has_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Plans?</label>
    <type>Checkbox</type>
</CustomField>