force-app/main/default/objects/Job__c/fields/Has_Selections__c.field-meta.xml
<CustomField>
    <fullName>Has_Selections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Selections</label>
    <type>Checkbox</type>
</CustomField>