force-app/main/default/objects/Job__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <description>MAtches opportunity stage through process and flow, until won/lost</description>
    <label>Job Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status_Job</valueSetName>
    </valueSet>
</CustomField>