force-app/main/default/objects/Job__c/fields/Klient_Project__c.field-meta.xml
<CustomField>
    <fullName>Klient_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>