force-app/main/default/objects/Job__c/fields/Link_to_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Slack_Channel__c</fullName>
    <formula>HYPERLINK(&quot;https://thundernj.slack.com/archives/&quot; &amp;  Slack_Channel_ID__c ,  Slack_Channel__c  , &quot;_blank&quot;)</formula>
    <label>Slack Channel Link</label>
    <type>Text</type>
</CustomField>