force-app/main/default/objects/Job__c/fields/Nearest_Cross_St__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Cross_St__c</fullName>
    <label>Nearest Cross St</label>
    <length>200</length>
    <type>Text</type>
</CustomField>