force-app/main/default/objects/Job__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Copied from oppt stage through flow and process</description>
    <label>Opportunity Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>