force-app/main/default/objects/Job__c/fields/Proposal_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Discovery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Discovery</label>
    <referenceTo>Proposal_Discovery__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>