force-app/main/default/objects/Job__c/fields/Public_Works__c.field-meta.xml
<CustomField>
    <fullName>Public_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Works?</label>
    <type>Checkbox</type>
</CustomField>