force-app/main/default/objects/Job__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>