force-app/main/default/objects/Job__c/fields/Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel__c</fullName>
    <label>Slack Channel</label>
    <length>81</length>
    <type>Text</type>
</CustomField>