force-app/main/default/objects/Job__c/fields/Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_ID__c</fullName>
    <inlineHelpText>right click on channel name in slack and copy link and paste then delete everything before the final &apos;/&apos;</inlineHelpText>
    <label>Slack Channel ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>