force-app/main/default/objects/Job__c/listViews/Active_Jobs.listView-meta.xml
<ListView>
    <fullName>Active_Jobs</fullName>
    <columns>Approx_Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Klient_Project__c</columns>
    <columns>Has_Plans__c</columns>
    <columns>Has_Selections__c</columns>
    <columns>Quote__c</columns>
    <columns>ScopeofWork__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Status__c</field>
        <operation>equals</operation>
        <value>Active Job</value>
    </filters>
    <label>Active Jobs</label>
</ListView>