force-app/main/default/objects/Job__c/listViews/Completely_Finished.listView-meta.xml
<ListView>
    <fullName>Completely_Finished</fullName>
    <columns>Approx_Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Klient_Project__c</columns>
    <columns>Quote__c</columns>
    <columns>ScopeofWork__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Link_to_Slack_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Status__c</field>
        <operation>equals</operation>
        <value>Completely Finished</value>
    </filters>
    <label>Completely Finished</label>
</ListView>